[#73] fix: permanently remove scrollbar from app

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,16 +3,7 @@
 @tailwind utilities;
 
 @layer utilities {
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  .no-scrollbar::-webkit-scrollbar {
-    display: none;
-  }
 
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
-  }
   @font-face {
     font-family: 'Poppins';
     src: url('../src/assets/fonts/Poppins-Regular.ttf');
@@ -23,4 +14,12 @@
   html {
     font-family: Poppins;
   }
+}
+
+::-webkit-scrollbar {
+  width: 0;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: transparent;
 }
